Add ls.lua library. Closes #106
git-svn-id: https://svn.nmap.org/nmap@35219 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] [GH#106] Added a new NSE module, ls.lua, for accumulating and
+  outputting file and directory listings. The afp-ls, nfs-ls, and smb-ls
+  scripts have been converted to use this module. [Pierre Lalet]
+
 o Fix Nmap's DTD, which did not recognize that the script element could contain
   character data when a script returns a number or a boolean.
   [Jonathan Daugherty]
