Warn about deprecated option names with -v
git-svn-id: https://svn.nmap.org/nmap@35229 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o Output a warning when deprecated options are used, and suggest the preferred
+  option. Currently deprecated: -i -o -m -sP -P0 -PN -oM -sR. The warning is
+  only visible with -v. [Daniel Miller]
+
 o [NSE] Added script http-ls. Parses web server directory index pages with
   optional recursion. [Pierre Lalet]
 
