--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o Disable TPACKET_V3 in our included libpcap. This version of the Linux kernel
+  packet ring API has problems that result in lots of lost packets. This patch
+  falls back to TPACKET_V2 or earlier versions if available. [nnposter]
+
 o Output a warning when deprecated options are used, and suggest the preferred
   option. Currently deprecated: -i -o -m -sP -P0 -PN -oM -sR. The warning is
   only visible with -v. [Daniel Miller]
