Display EC curve name in ssl-enum-ciphers
Closes #173. See http://seclists.org/nmap-dev/2015/q3/254

git-svn-id: https://svn.nmap.org/nmap@35250 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Enhanced reporting of elliptic curve names and strengths in
+  ssl-enum-ciphers. The name of the curve is now reported instead of just "ec"
+  [Brandon Paulsen]
+
 o [NSE] Added knx-gateway-discover and knx-gateway-info scripts for gathering
   information from multicast and unicast KNX gateways, which connect home
   automation systems to IP networks. [Niklaus Schiess, Dominik Schneider]
